sticky contact improve as a table and fix animation

--- a/views/sticky_contact.html
+++ b/views/sticky_contact.html
@@ -1,10 +1,10 @@
 <div class="square">
-   <div class="phoneContact mb-1 rounded-left">
-      <i class="material-icons md-36">call</i>
-      Contactez le centre
-   </div>
-   <div class="doctolibContact rounded-left">
-      <i class="material-icons md-36">home</i>
-      Doctolib
-   </div>
+  <div class="phoneContact mb-1 rounded-left p-1">
+      <i class="material-icons md-36" style="display: table-cell; vertical-align: middle; color:white;">call</i>
+     <div class="pl-2 phoneContactTxt" style="display: table-cell; vertical-align: middle;">Contactez le centre</div>
+  </div>
+  <div class="doctolibContact rounded-left p-1">
+     <i class="material-icons md-36" style="display: table-cell; vertical-align: middle;color:white;">home</i>
+     <div class="pl-2 doctolibContactTxt" style="display: table-cell; vertical-align: middle;">Doctolib</div>
+  </div>
 </div>
