--- a/views/sticky_contact.html
+++ b/views/sticky_contact.html
@@ -1,10 +1,10 @@
 <div class="square">
-  <div class="phoneContact mb-1 rounded-left p-1">
+  <div class="phoneContact p-1" onClick="window.location.href='/espace-natal/contact';">
       <i class="material-icons md-36" style="display: table-cell; vertical-align: middle; color:white;">call</i>
-     <div class="pl-2 phoneContactTxt" style="display: table-cell; vertical-align: middle;">Contactez le centre</div>
+     <div class="pl-2 phoneContactTxt">Contactez le centre</div>
   </div>
-  <div class="doctolibContact rounded-left p-1">
+  <div class="doctolibContact p-1" onClick="window.open('https://www.doctolib.fr/maison-perinatale/paris/espace-natal', '_blank');">
      <i class="material-icons md-36" style="display: table-cell; vertical-align: middle;color:white;">home</i>
-     <div class="pl-2 doctolibContactTxt" style="display: table-cell; vertical-align: middle;">Doctolib</div>
+     <div class="pl-2 doctolibContactTxt">Doctolib</div>
   </div>
 </div>
