--- a/views/equipe_concept_centre.html
+++ b/views/equipe_concept_centre.html
@@ -4,7 +4,6 @@
     <div class="card-body">
       <h5 class="card-title">Notre Concept</h5>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
   <div class="card">
@@ -12,7 +11,6 @@
     <div class="card-body">
       <h5 class="card-title">Le Centre</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
   <div class="card">
@@ -20,7 +18,6 @@
     <div class="card-body">
       <h5 class="card-title">L'Equipe</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
 </div>
@@ -29,5 +26,8 @@
    $('.card').hover(
        function(){ $(this).addClass('shadow') },
        function(){ $(this).removeClass('shadow') }
-)
+   )
+   $('.card').click(
+       function(){ window.location.href = "tabs_concept_centre_equipe.php"; }
+   )
 </script>
