--- a/style.css
+++ b/style.css
@@ -368,11 +368,83 @@ h6 small {
    }
 }
 
+/*****************/
+/*TEST ANIMATION*/
+/***************/
+.stuff {
+   /*position:absolute;
+  top:50%;
+  left:50%;
+  /*transform:translate(-50%, -50%);*/
+}
+
+.buttonTab {
+   position: relative;
+   display: inline-block;
+   cursor: pointer;
+   margin: 0 auto;
+   width: 80px;
+   height: 80px;
+   /*font-size: 52px;*/
+   transition: all 0.4s ease-in;
+   color: rgb(168,216,217);
+}
+
+/*start click effect*/
+.buttonTab::before {
+   content: '';
+   background-color: aliceblue;
+   border-radius: 50%;
+   display: block;
+   position: absolute;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   transform: scale(0.001, 0.001);
+}
+
+.buttonTab:focus {
+   outline: 0;
+   color: #fff;
+}
+.buttonTab:focus::before{
+   animation: effect_click 0.8s ease-out;
+}
+
+@keyframes effect_click {
+   50% {
+      transform: scale(1.5, 1.5);
+      opacity: 0;
+   }
+
+   99% {
+      transform: scale(0.001, 0.001);
+      opacity: 0;
+   }
+
+   100% {
+      transform: scale(0.001, 0.001);
+      opacity: 1;
+   }
+}
+
+/*****************/
+/*TEST ANIMATION*/
+/***************/
 .navTabs {
    width: 100%;
    background-color: rgb(53, 118, 136);
+   text-align: center;
 }
 
+.buttonTab p {
+   text-align: center;
+   font-weight: 600;
+   /*font-size: 0.75em !important;*/
+   /*color: white;*/
+}
+/*
 .tabs {
    padding: 0.5em 0;
 }
@@ -384,18 +456,60 @@ h6 small {
    border-radius: 50%;
    background: rgb(53, 118, 136);
    display: inline-block;
-}
+   /*transition: all 0.4s ease-in;
 
-.tabBtn:hover {
+   span[class^='ion'] {
+      position: relative;
+   }
+
+   /*start click effect*/
+/*&:before {
+      content: '';
+      background-color: aliceblue;
+      border-radius: 50%;
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      transform: scale(0.001, 0.001);
+   }
+
+   &:focus {
+      outline: 0;
+      color: #fff;
+
+      &:before {
+         animation: effect_dylan 0.8s ease-out;
+      }
+   }
+}
+@keyframes effect_dylan {
+  50% {
+    transform: scale(1.5, 1.5);
+    opacity: 0;
+  }
+  99% {
+    transform: scale(0.001, 0.001);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(0.001, 0.001);
+    opacity: 1;
+  }*/
+
+
+/*.tabBtn:hover {
    animation: fadein 1s;
    -moz-animation: fadein 1s;
    /* Firefox */
-   -webkit-animation: fadein 1s;
+/*-webkit-animation: fadein 1s;
    /* Safari et Chrome */
-   -o-animation: fadein 1s;
+/*-o-animation: fadein 1s;
    /* Opera */
-}
-
+/*}*/
+/*
 @keyframes fadein {
    from {
       background: rgba(207, 207, 207, 0);
@@ -413,7 +527,7 @@ h6 small {
 @-moz-keyframes fadein {
 
    /* sur Firefox */
-   from {
+/*   from {
       background: rgba(207, 207, 207, 0);
    }
 
@@ -425,7 +539,7 @@ h6 small {
 @-webkit-keyframes fadein {
 
    /* sur Safari et Chrome */
-   from {
+/*   from {
       background: rgba(207, 207, 207, 0);
       width: 30px;
       height: 30px;
@@ -441,20 +555,15 @@ h6 small {
 @-o-keyframes fadein {
 
    /* sur Opera */
-   from {
+/*   from {
       background: rgba(207, 207, 207, 0);
    }
 
    to {
       background: rgba(207, 207, 207, 0.5);
    }
-}
+}*/
 
-.tabBtn p {
-   text-align: center;
-   font-weight: 600;
-   color: white;
-}
 
 /*when hover transition with white circle opacity 20% that growing*/
 /*
