--- a/views/navtabs.html
+++ b/views/navtabs.html
@@ -1,23 +1,16 @@
 <div class="navTabs">
-   <div class="row justify-content-md-center m-0">
-      <div class="col-2 text-center tabs">
-         <div class="tabBtn">
-            <i class="material-icons md-36" style="color:white">lightbulb_outline</i>
-            <p>Notre Concept</p>
-         </div>
+   <div class="stuff">
+      <div class="buttonTab mt-2 mx-3" tabindex="1">
+         <span><i class="material-icons md-36">lightbulb_outline</i></span>
+         <p>Concept</p>
       </div>
-      <div class="col-2 text-center tabs">
-         <div class="tabBtn">
-            <i class="material-icons md-36" style="color:white">account_balance</i>
-            <p>Le Centre</p>
-         </div>
+      <div class="buttonTab mt-2 mx-3" tabindex="2">
+         <span><i class="material-icons md-36">account_balance</i></span>
+         <p>Le Centre</p>
       </div>
-      <div class="col-2 text-center tabs">
-         <div class="tabBtn">
-            <i class="material-icons md-36" style="color:white">face</i>
-            <p>L'Equipe</p>
-         </div>
+      <div class="buttonTab mt-2 mx-3" tabindex="3">
+         <span><i class="material-icons md-36">face</i></span>
+         <p>L'Equipe</p>
       </div>
    </div>
-
 </div>
