--- a/views/navtabs.html
+++ b/views/navtabs.html
@@ -1,3 +1,38 @@
+<div id="tab-1" class="tab-content current">
+   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</div>
+<div id="tab-2" class="tab-content">
+   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</div>
+<div id="tab-3" class="tab-content container">
+   <div class="card-deck">
+      <div class="card">
+         <img src="src/Benzakine.jpg" class="card-img-top" alt="Benzakine_profil">
+         <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+      </div>
+   </div>
+</div>
+
 <div class="navTabs">
    <div class="stuff">
       <div class="buttonTab mt-2 mx-3" tabindex="1" data-tab="tab-1">
@@ -14,32 +49,27 @@
       </div>
    </div>
 </div>
-<!--div class="navTabs">
-   <div class="stuff">
-      <a class="buttonTab mt-2 mx-3" tabindex="1" data-tab="tab-1">
-         <span><i class="material-icons md-36">lightbulb_outline</i></span>
-         <p>Concept</p>
-      </a>
-      <a class="buttonTab mt-2 mx-3" tabindex="2" data-tab="tab-2">
-         <span><i class="material-icons md-36">account_balance</i></span>
-         <p>Le Centre</p>
-      </a>
-      <a class="buttonTab mt-2 mx-3" tabindex="3" data-tab="tab-3">
-         <span><i class="material-icons md-36">face</i></span>
-         <p>L'Equipe</p>
-      </a>
-   </div>
-</div-->
 
- <script>
-    $(document).ready(function(){
-	//$('div.buttonTab p').click(function(){
-      $('div.buttonTab').click(function(){
-		var tab_id = $(this).attr('data-tab');
-      var link = "tabs_concept_centre_equipe.php?tab="+tab_id;
-      console.log(link);
-      window.location.href = link;
-	})
 
-})
- </script>
+
+<script>
+   $(document).ready(function() {
+      $('div.buttonTab').click(function() {
+         var tab_id = $(this).attr('data-tab');
+         $('.tab-content').removeClass('current');
+         $("#" + tab_id).addClass('current');
+      })
+
+   })
+</script>
+
+<style media="screen">
+   .tab-content {
+      display: none;
+      margin: 1em;
+   }
+
+   .tab-content.current {
+      display: inherit;
+   }
+</style>
